--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ CLOUD_SECRET_KEY=7NDIaGmXuAFz2rjDegf70wzZ1hQ
 
 JWT_SECRET_KEY=L81ggXwL4L9c46MkVbJU/8W+r4Vb+k1POMAeOssY194=
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://blog-app-mern-proj.netlify.app
